--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
-<html>
-<head>Lion Team</head>
+<!DOCTYPE html>
+<html lang="th">
 
-<body>
-    <h1>Lion Team</h1>
-</body>
+	<head>
+		<title>Home</title>
 
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<!-- Stylesheet -->
+		<link rel="stylesheet" href="assets/css/home.css">
+		<link rel="icon" type="image/png" href="assets/img/favicon.png">
+
+	</head>
+	<body>
+
+		<!-- Header -->
+		<header>Header</header>
+
+		<!-- Content -->
+		<main>Content</main>
+
+		<!-- Footer -->
+		<footer>Footer</footer>
+
+		<!-- Script -->
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	</body>
 </html>
-
