--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 						</a>
 					</div>
 
+					<!-- logo footer -->
 					<div class="logo logo-bw logo-footer">
 						<a href="index.html">Autoland</a>
 					</div>
