--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="th">
 
 	<head>
-		<title>Home</title>
+		<title>Contact</title>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
