--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 		<script src="https://use.fontawesome.com/40b6c6b403.js"></script>
 		<link rel="stylesheet" href="assets/css/home.css">
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
-<style type="text/css">
-	.img-thumbnail{
-		width:400px;
-	}
-</style>
+
 	</head>
 	<body>
 
@@ -53,107 +49,7 @@
 		</header>
 
 		<!-- Content -->
-		<main>
-			<div class="container-fluid">
-	<div class="row">
-		<div class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4">
-				<p class="text-center">Find Cars</p>
-				<input type="text" class="form-control" name="search"/></br>
-			</div>
-			<div class="col-md-4"></div>
-		</div>
-		<div class="row">
-		
-					<div class="col-md-12">
-						
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="/assets/images/products/benz_c300_2017.jpg" class="img-thumbnail" />
-				<h3 class="text-center title">
-				benz_c300
-			</h3>
-			<h4 class="text-center year">
-				2017
-			</h4>
-			</hr>
-			<p class="text-center price">
-				1,000,000
-			</p>
-		</div>
-	
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="/assets/images/products/bmw_i3_2017.jpg" class="img-thumbnail" />
-			<h3 class="text-center title">
-				bmw i 3
-			</h3>
-				<h4 class="text-center year">
-				2017
-			</h4>
-			</hr>
-			<p class="text-center price">
-				1,000,000
-			</p>
-		</div>
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="/assets/images/products/honda_hrv_2016.jpg" class="img-thumbnail" />
-			<h3 class="text-center title">
-				honda hrv
-			</h3>
-				<h4 class="text-center year">
-				2017
-			</h4>
-			</hr>
-			<p class="text-center price">
-				1,000,000
-			</p>
-		</div>
-			</div>
-			<div class="col-md-12">
-			<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="/assets/images/products/honda_jazz_2017.jpg" class="img-thumbnail" />
-			<h3 class="text-center title">
-				benz
-			</h3>
-				<h4 class="text-center year">
-				2017
-			</h4>
-			</hr>
-			<p class="text-center price">
-				1,000,000
-			</p>
-		</div>
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="/assets/images/products/hyundai_elantra_2015.jpg" class="img-thumbnail" />
-			<h3 class="text-center title">
-				bmw i 3
-			</h3>
-				<h4 class="text-center year">
-				2017
-			</h4>
-			</hr>
-			<p class="text-center price">
-				1,000,000
-			</p>
-		</div>
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="/assets/images/products/mazda_3_2015.jpg" class="img-thumbnail" />
-			<h3 class="text-center title">
-				honda hrv
-			</h3>
-				<h4 class="text-center year">
-				2017
-			</h4>
-			</hr>
-			<p class="text-center price">
-				1,000,000
-			</p>
-		</div>
-		</div>
-	</div>
-</div>
-</div>
-		</main>
+		<main>Content</main>
 
 		<!-- Footer -->
 		<footer class="footer">
@@ -189,6 +85,7 @@
 						</a>
 					</div>
 
+					<!-- logo footer -->
 					<div class="logo logo-bw logo-footer">
 						<a href="index.html">Autoland</a>
 					</div>
